// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post edit form has the expected HTML when all checks are inactive (i.e. all data is present) 1`] = `
<div
  style="background-color: rgb(255, 250, 250);"
>
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"
    >
      <h4
        style="color: rgb(235, 113, 180); text-align: center;"
      >
        Create post
      </h4>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            What would you like help with?
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <!---->
                 
                <div
                  class="form-group"
                >
                  <label
                    for="title"
                  >
                    Title
                  </label>
                   
                  <input
                    class="form-control"
                    id="title"
                    type="text"
                  />
                </div>
              </div>
               
              <div>
                <!---->
                 
                <div
                  class="form-group"
                >
                  <label>
                    Give some more details
                  </label>
                  <br />
                   
                  <textarea
                    class="form-control"
                    placeholder="Give details about what you need, things to think about:
- Tell us a bit about the background of why you need help
- Give plenty of detail about the activity
- Dig down into details of any specialist skills / experience needed
- Tell us what kind of person you would like to help out
- Be nice!"
                    rows="5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Location
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <!---->
                 
                <label>
                  Where do you need help?
                </label>
                 
                <div
                  class="form-group"
                >
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="remoteLocation"
                      type="checkbox"
                      value="true"
                    />
                    Remote (over the phone / internet)
        
                  </label>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    At specific locations:
                  </label>
                   
                  <div>
                    <div
                      class="form-control list-item"
                    >
                      
      Location
      
                      <button
                        aria-label="Close"
                        class="close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Interests & skills
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <!---->
                 
                <div
                  class="form-group"
                >
                  <label>
                    People might want to help if they are interested in:
                  </label>
                   
                  <div>
                    <div
                      class="form-control list-item"
                    >
                      
      Interest
      
                      <button
                        aria-label="Close"
                        class="close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    Skills that your helpers will need:
                  </label>
                   
                  <div>
                    <div
                      class="form-control list-item"
                    >
                      
      Skill
      
                      <button
                        aria-label="Close"
                        class="close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Time required
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <!---->
                 
                <label>
                  How much time is required?
                </label>
                 
                <div
                  class="form-group"
                >
                  <select
                    id="timeAmount"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                    <option>
                      1hr
                    </option>
                     
                    <option>
                      2hr
                    </option>
                     
                    <option>
                      3hr
                    </option>
                     
                    <option>
                      4hr
                    </option>
                     
                    <option>
                      1day
                    </option>
                     
                    <option>
                      2days
                    </option>
                     
                    <option>
                      3days
                    </option>
                  </select>
                   
                  <span>
                    per
                  </span>
                   
                  <select
                    id="timeFrequency"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                    <option>
                      Week
                    </option>
                     
                    <option>
                      Month
                    </option>
                  </select>
                </div>
              </div>
               
              <div>
                <!---->
                 
                <div
                  class="form-group"
                >
                  <label
                    class="checkbox"
                  >
                    What times of day can people help?
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="weekday"
                      type="checkbox"
                      value="Weekday"
                    />
                     Weekday
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="weekend"
                      type="checkbox"
                      value="Weekend"
                    />
                     Weekend
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="evening"
                      type="checkbox"
                      value="Evening"
                    />
                     Evening
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="daytime"
                      type="checkbox"
                      value="Daytime"
                    />
                     Daytime
        
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-10 col-xs-offset-1"
        >
          <!---->
           
          <!---->
           
          <button
            class="btn btn-primary"
            id="submitButton"
            style="width: 100%; text-align: center;"
          >
            
            Create
            
          </button>
           
          <br />
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`post edit form has the expected HTML when all checks are triggered (i.e. all data is missing) 1`] = `
<div
  style="background-color: rgb(255, 250, 250);"
>
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"
    >
      <h4
        style="color: rgb(235, 113, 180); text-align: center;"
      >
        Create post
      </h4>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            What would you like help with?
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Give your post a title that will help people understand the outline of what you need
                  </p>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label
                    for="title"
                  >
                    Title
                  </label>
                   
                  <input
                    class="form-control"
                    id="title"
                    type="text"
                  />
                </div>
              </div>
               
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Be descriptive about the details of what you need
                  </p>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    Give some more details
                  </label>
                  <br />
                   
                  <textarea
                    class="form-control"
                    placeholder="Give details about what you need, things to think about:
- Tell us a bit about the background of why you need help
- Give plenty of detail about the activity
- Dig down into details of any specialist skills / experience needed
- Tell us what kind of person you would like to help out
- Be nice!"
                    rows="5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Location
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Please let your helpers know the locations you need help at - either add specific locations, or select remote, or both
                  </p>
                </div>
                 
                <label>
                  Where do you need help?
                </label>
                 
                <div
                  class="form-group"
                >
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="remoteLocation"
                      type="checkbox"
                      value="true"
                    />
                    Remote (over the phone / internet)
        
                  </label>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    At specific locations:
                  </label>
                   
                  <div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Interests & skills
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Please add some interests or skills - these allow helpers to be matched with you
                  </p>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    People might want to help if they are interested in:
                  </label>
                   
                  <div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label>
                    Skills that your helpers will need:
                  </label>
                   
                  <div>
                     
                    <select
                      class="form-control list-item"
                    >
                      <option
                        disabled="disabled"
                        value=""
                      />
                       
                    </select>
                     
                    <button
                      class="btn btn-primary"
                      disabled="disabled"
                    >
                      Add another
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Time required
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Please fill this out - it's important for your helpers to be able to match with you and plan their time
                  </p>
                </div>
                 
                <label>
                  How much time is required?
                </label>
                 
                <div
                  class="form-group"
                >
                  <select
                    id="timeAmount"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                    <option>
                      1hr
                    </option>
                     
                    <option>
                      2hr
                    </option>
                     
                    <option>
                      3hr
                    </option>
                     
                    <option>
                      4hr
                    </option>
                     
                    <option>
                      1day
                    </option>
                     
                    <option>
                      2days
                    </option>
                     
                    <option>
                      3days
                    </option>
                  </select>
                   
                  <span>
                    per
                  </span>
                   
                  <select
                    id="timeFrequency"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                    <option>
                      Week
                    </option>
                     
                    <option>
                      Month
                    </option>
                  </select>
                </div>
              </div>
               
              <div>
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Please fill this out - helpers need to know what slots you need them
                  </p>
                </div>
                 
                <div
                  class="form-group"
                >
                  <label
                    class="checkbox"
                  >
                    What times of day can people help?
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="weekday"
                      type="checkbox"
                      value="Weekday"
                    />
                     Weekday
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="weekend"
                      type="checkbox"
                      value="Weekend"
                    />
                     Weekend
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="evening"
                      type="checkbox"
                      value="Evening"
                    />
                     Evening
        
                  </label>
                   
                  <label
                    class="checkbox-inline"
                  >
                    <input
                      id="daytime"
                      type="checkbox"
                      value="Daytime"
                    />
                     Daytime
        
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-10 col-xs-offset-1"
        >
          <div
            class="alert alert-danger strong"
            role="alert"
          >
            <p>
              There are still some missing items, described above, you need to fill these out before you can submit
            </p>
          </div>
           
          <!---->
           
          <button
            class="btn btn-primary"
            disabled="disabled"
            id="submitButton"
            style="width: 100%; text-align: center;"
          >
            
            Create
            
          </button>
           
          <br />
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;
